--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^6.22.2",
-    "sass": "^1.71.1"
+    "sass": "^1.71.1",
+    "vite-plugin-require": "^1.1.14"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
